--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portafolio</title>
+
 </head>
 <body>
     
+    <img src ="images/photo.jpg">
+    <a href ="background.html">My background</a>
+    <a href ="projects.html" target>"_blank">My projects</a>
+    <a href="https://www.facebook.com/">Facebook</a>
+    
+
 </body>
 </html>
