--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 </head>
 <body>
-    
+    <center>
     <img src ="images/photo.jpg">
     <a href ="background.html">My background</a>
-    <a href ="projects.html" target>"_blank">My projects</a>
+    <a href ="projects.html" target="_blank"> My projects </a>
     <a href="https://www.facebook.com/">Facebook</a>
-    
+</center>
 
 </body>
 </html>
