--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <center>
-    <img src ="images/photo.jpg">
+    <img src ="images/photo.jpg"width="50">
+
     <a href ="background.html">My background</a>
     <a href ="projects.html" target="_blank"> My projects </a>
     <a href="https://www.facebook.com/">Facebook</a>
 </center>
+
 
 </body>
 </html>
