--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 </head>
 <body>
     <center>
-    <img src ="images/photo.jpg"width="50">
+    <img src ="images/photo.jpg" width="200"><br>
 
-    <a href ="background.html">My background</a>
-    <a href ="projects.html" target="_blank"> My projects </a>
-    <a href="https://www.facebook.com/">Facebook</a>
+    <a href ="background.html"target="_blank"> Mybackground </a>&nbsp; &nbsp;  &nbsp; 
+    <a href ="projects.html" target="_blank"> My Projects </a> &nbsp; &nbsp; &nbsp; 
+    <a href ="experience.html" target="_blank"> My Experience </a>    
+    
 </center>
 
+<center>
+<a href="https://www.facebook.com/"target="_blank">Facebook</a> &nbsp; &nbsp; &nbsp; 
+<a href ="https://www.instagram.com/"target="_blank">Intagram</a>&nbsp; &nbsp; &nbsp; 
+<a href ="https://twitter.com/"target="_blank">Twitter</a>
 
+
+</center>
 </body>
 </html>
