--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <center>
-    <img src ="images/photo.jpg" width="200"><br>
+    <img src ="images/foto.jpg" width="400"><br>&nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;  &nbsp; 
 
     <a href ="background.html"target="_blank"> My background </a>&nbsp; &nbsp;  &nbsp; 
     <a href ="projects.html" target="_blank"> My Projects </a> &nbsp; &nbsp; &nbsp; 
